--- a/responsive.css
+++ b/responsive.css
@@ -13,7 +13,7 @@
 .list {
     width: 100%;
     height: 100vh;
-    background-color: #1f1f38;
+    background-color: #191962;
     text-align: center;
     display: flex;
     flex-direction: column;
