projects section chang

--- a/style.css
+++ b/style.css
@@ -53,7 +53,7 @@ body {
 .nav-col a:hover {
     border-radius: .4rem;
     color: #1f1f38;
-    background-color: #fff;
+    background-color: #ffffff;
 }
 
 
