--- a/responsive.css
+++ b/responsive.css
@@ -1,131 +1,155 @@
-#bottom {
-    display: flex;
+/* ===============================
+   MOBILE DEVICES (phones)
+   max-width: 600px
+================================ */
+@media (max-width: 600px) {
+
+    /* Navbar hidden, bottom nav visible */
+    #navbar {
+        display: none;
+    }
+
+    #bottom {
+        display: flex;
+    }
+
+    /* Layout stacks */
+    #home,
+    .about-container,
+    .services-container,
+    .projects-container {
+        flex-direction: column;
+        align-items: center;
+    }
+
+    .home-left,
+    .home-right,
+    .about-left,
+    .about-right,
+    .skills-left,
+    .skills-right {
+        width: 100%;
+        padding: 1rem;
+        text-align: center;
+    }
+
+    /* Profile image */
+    .circle {
+        width: 13rem;
+        height: 13rem;
+    }
+
+    /* Services & Projects cards */
+    .test-item,
+    .projects-item {
+        width: 100%;
+        margin: 1rem 0;
+    }
+
+    .test-item img {
+        width: 60%;
+    }
+
+    /* Skills */
+    .skills-left img {
+        width: 90%;
+    }
+
+    /* Form */
+    .form {
+        width: 100%;
+        padding: 0 1rem;
+    }
+
+    /* Footer */
+    #footer ul {
+        flex-direction: column;
+    }
+
+    #footer ul li {
+        margin: .5rem 0;
+    }
 }
 
-#navbar {
-    display: none;
+
+/* ===============================
+   TABLETS (iPads, small laptops)
+   601px – 992px
+================================ */
+@media (min-width: 601px) and (max-width: 992px) {
+
+    /* Navbar visible */
+    #navbar {
+        display: block;
+    }
+
+    #bottom {
+        display: none;
+    }
+
+    /* Home */
+    #home {
+        flex-direction: column;
+        align-items: center;
+    }
+
+    .home-left,
+    .home-right {
+        width: 90%;
+        text-align: center;
+    }
+
+    /* About */
+    .about-container {
+        flex-direction: column-reverse;
+        align-items: center;
+    }
+
+    .about-left,
+    .about-right {
+        width: 90%;
+        text-align: center;
+    }
+
+    /* Skills */
+    .skills-left,
+    .skills-right {
+        width: 90%;
+    }
+
+    /* Services & Projects */
+    .services-container,
+    .projects-container {
+        flex-wrap: wrap;
+        justify-content: center;
+    }
+
+    .test-item,
+    .projects-item {
+        width: 45%;
+        margin: 1rem;
+    }
+
+    /* Form */
+    .form {
+        width: 90%;
+    }
 }
 
-.right {
-    display: block;
-}
 
-.list {
-    width: 100%;
-    height: 100vh;
-    background-color: #191962;
-    text-align: center;
-    display: flex;
-    flex-direction: column;
-    position: fixed;
-    top: 0rem;
-    justify-content: center;
-    left: 100%;
-    transition: all 1s;
-    z-index: 8000;
-}
+/* ===============================
+   DESKTOP / LAPTOP
+   min-width: 993px
+================================ */
+@media (min-width: 993px) {
 
-.fa-bars {
-    color: #fff;
-    font-size: 2rem;
-}
+    #navbar {
+        display: block;
+    }
 
-#check {
-    display: none;
-}
+    #bottom {
+        display: none;
+    }
 
-.checkBtn {
-    display: block;
-}
-
-.nav-col a {
-    color: #fff;
-}
-
-#check:checked~ul {
-    left: 0%;
-}
-
-.cross {
-    position: absolute;
-    top: 1rem;
-    right: 1rems;
-}
-
-.cross i {
-    font-size: 2rem;
-    color: white;
-    position: absolute;
-    top: 2rem;
-    left: 2rem;
-}
-
-.right-nav {
-    display: block;
-}
-
-.right-nav .flex {
-    display: none;
-}
-
-.services-container,
-#home,
-.services-container {
-    flex-direction: column;
-}
-
-.services-container {
-    align-items: center;
-}
-
-.about-container {
-    flex-direction: column-reverse;
-}
-
-#home,
-.about-container,
-.services-container {
-    align-items: center;
-}
-
-.home-left,
-.home-right {
-    width: auto;
-}
-
-.services-container {
-    height: auto;
-}
-
-.about-left,
-.about-right {
-    width: auto;
-}
-
-.about-right img {
-    width: 70%;
-}
-
-.skills-left {
-    width: 80%;
-}
-
-.skills-right {
-    width: 80%;
-}
-
-.about-right {
-    margin-bottom: 1rem;
-    text-align: center;
-    padding: .5rem 1rem;
-
-}
-
-.test-item {
-    margin-bottom: 1rem;
-    width: 100%;
-}
-
-.test-item img {
-    width: 50%;
+    /* Default desktop styles already applied in style.css */
 }
